squaremap/Deployment-squaremap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: squaremap
  name: squaremap
  namespace: games
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: squaremap
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        name: squaremap
    spec:
      containers:
      - image: docker.io/nginx:1.31.6-alpine
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        name: nginx
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: web
          readOnly: true
        - mountPath: /etc/nginx/conf.d/default.conf
          name: squaremap-nginx-conf
          readOnly: true
          subPath: default.conf
      volumes:
      - hostPath:
          path: /data/minecraft/plugins/squaremap/web
        name: web
      - configMap:
          name: squaremap-nginx-conf
        name: squaremap-nginx-conf
