squaremap/Service-squaremap.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: squaremap
    name: squaremap
  name: squaremap
  namespace: games
spec:
  ports:
  - name: nginx-http
    port: 80
    targetPort: 80
  selector:
    name: squaremap
